[package]
name = "subcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
env_logger = "0.9.0"
rodio = "0.14.0"
serde = { version = "1.0.130", features = ["derive"] }
# sunk = "0.1.2"
sunk = { path = "../sunk" }
thiserror = "1.0.30"
toml = "0.5.8"

[features]
